[package]
name = "tamarack"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.2.7182"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.2"
